--- a/dev-java/cglib/ChangeLog
+++ b/dev-java/cglib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/cglib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/cglib/ChangeLog,v 1.40 2008/03/11 15:27:14 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/cglib/ChangeLog,v 1.41 2008/03/11 15:40:43 betelgeuse Exp $
+
+  11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> cglib-2.0.2-r2.ebuild:
+  RESTRICT test for upcoming generic src_test. They fail and would need
+  aspectwerkz-1.0.
 
   11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> cglib-2.0.2-r2.ebuild,
   cglib-2.2_beta1.ebuild:
