--- a/sys-auth/pam_mktemp/ChangeLog
+++ b/sys-auth/pam_mktemp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-auth/pam_mktemp
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_mktemp/ChangeLog,v 1.6 2008/03/06 17:15:21 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_mktemp/ChangeLog,v 1.7 2008/03/11 15:41:48 armin76 Exp $
+
+  11 Mar 2008; Raúl Porcel <armin76@gentoo.org> pam_mktemp-1.0.3.ebuild:
+  Add ~alpha/~ia64
 
   06 Mar 2008; Ferris McCormick <fmccor@gentoo.org> pam_mktemp-1.0.3.ebuild:
   Add ~sparc for testing, required for re-keyword request in Bug #212437.
