--- a/dev-lang/python/ChangeLog
+++ b/dev-lang/python/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.306 2008/03/11 14:23:49 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.307 2008/03/11 16:01:07 corsair Exp $
+
+  11 Mar 2008; Markus Rothe <corsair@gentoo.org> python-2.4.4-r9.ebuild:
+  Stable on ppc64; bug #211281
 
   11 Mar 2008; Tiziano Müller <dev-zero@gentoo.org> python-2.4.4-r9.ebuild,
   python-2.5.1-r5.ebuild:
