--- a/net-mail/dovecot/ChangeLog
+++ b/net-mail/dovecot/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-mail/dovecot
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.149 2008/03/10 15:30:38 wschlich Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.150 2008/03/11 16:27:05 wschlich Exp $
+
+*dovecot-1.1_rc3-r1 (11 Mar 2008)
+*dovecot-1.0.13-r1 (11 Mar 2008)
+
+  11 Mar 2008; Wolfram Schlich <wschlich@gentoo.org>
+  +files/dovecot-1.0.13-body.patch, +files/dovecot-1.1_rc3-body.patch,
+  +dovecot-1.0.13-r1.ebuild, +dovecot-1.1_rc3-r1.ebuild:
+  added patches for fetch_bodystructure/imap_bodystructure_write
 
   10 Mar 2008; Wolfram Schlich <wschlich@gentoo.org>
   -dovecot-1.0.10-r1.ebuild, -dovecot-1.0.11.ebuild, -dovecot-1.0.12.ebuild,
