--- a/media-gfx/graphviz/ChangeLog
+++ b/media-gfx/graphviz/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/graphviz
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphviz/ChangeLog,v 1.143 2008/03/01 14:08:31 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphviz/ChangeLog,v 1.144 2008/03/11 16:44:56 ricmm Exp $
+
+  11 Mar 2008; <ricmm@gentoo.org> graphviz-2.12.ebuild:
+  Drop to ~mips due to unstable deps
 
   01 Mar 2008; Christoph Mende <angelos@gentoo.org>
   graphviz-2.16.1-r3.ebuild:
