--- a/sys-apps/iproute2/ChangeLog
+++ b/sys-apps/iproute2/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/iproute2
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/iproute2/ChangeLog,v 1.101 2007/10/08 14:06:02 vapier Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/iproute2/ChangeLog,v 1.102 2008/03/11 16:51:00 ricmm Exp $
+
+  11 Mar 2008; <ricmm@gentoo.org> iproute2-2.6.15.20060110.ebuild,
+  iproute2-2.6.16.20060323.ebuild, iproute2-2.6.18.20061002.ebuild,
+  iproute2-2.6.19.20061214.ebuild, iproute2-2.6.22.20070710.ebuild:
+  Drop to ~mips due to unstable deps
 
   06 Oct 2007; Tom Gall <tgall@gentoo.org>
   iproute2-2.6.22.20070710.ebuild:
