--- a/x11-libs/qt/ChangeLog
+++ b/x11-libs/qt/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/qt
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.523 2008/03/09 21:45:56 zlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.524 2008/03/11 16:51:15 ingmar Exp $
+
+  11 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org> qt-4.3.2-r1.ebuild,
+  qt-4.3.4.ebuild:
+  "append-flags -fno-gcse" on amd64 with gcc 3, bug 178652.
 
   09 Mar 2008; Bo Ørsted Andresen <zlin@gentoo.org> qt-4.4.0_beta1.ebuild:
   Revert last commit.
