--- a/app-editors/jed/ChangeLog
+++ b/app-editors/jed/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/jed
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/jed/ChangeLog,v 1.49 2008/03/11 15:35:50 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/jed/ChangeLog,v 1.50 2008/03/11 17:24:38 opfer Exp $
+
+  11 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
+  -files/jed-0.99.16-darwin.patch, -files/jed-0.99.16-gentoo-shmode.sl,
+  -files/jed-0.99.16-jed.info.patch, -files/jed.info.diff,
+  -jed-0.99.16-r2.ebuild:
+  clean up
 
   11 Mar 2008; Brent Baude <ranger@gentoo.org> jed-0.99.18.ebuild:
   stable ppc64, bug 211991
