--- a/www-client/links/ChangeLog
+++ b/www-client/links/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-client/links
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/links/ChangeLog,v 1.103 2008/03/09 11:06:55 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/links/ChangeLog,v 1.104 2008/03/11 18:16:12 jer Exp $
+
+  11 Mar 2008; Jeroen Roovers <jer@gentoo.org> links-2.1_pre33.ebuild:
+  Stable for HPPA (bug #212593).
 
   09 Mar 2008; Raúl Porcel <armin76@gentoo.org> links-2.1_pre33.ebuild:
   alpha/ia64 stable wrt #212593
