--- a/net-im/silc-toolkit/ChangeLog
+++ b/net-im/silc-toolkit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/silc-toolkit
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/silc-toolkit/ChangeLog,v 1.80 2008/03/11 18:12:28 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/silc-toolkit/ChangeLog,v 1.81 2008/03/11 18:18:46 jer Exp $
+
+  11 Mar 2008; Jeroen Roovers <jer@gentoo.org> silc-toolkit-1.1.6.ebuild:
+  Stable for HPPA (bug #212362).
 
   11 Mar 2008; Raúl Porcel <armin76@gentoo.org> silc-toolkit-1.1.6.ebuild:
   alpha/ia64/sparc/x86 stable wrt security #212362
