--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1197 2008/03/11 00:31:00 philantrop Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1198 2008/03/11 18:23:30 opfer Exp $
+
+  11 Mar 2008; Christian Faulhammer <opfer@gentoo.org> package.mask:
+  updated mask for Gatt
 
   11 Mar 2008; Wulf C. Krueger <philantrop@gentoo.org> package.mask:
   Added some more new packages for KDE 4.0.2.
