--- a/dev-db/sqlite/ChangeLog
+++ b/dev-db/sqlite/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.181 2008/03/11 18:24:52 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.182 2008/03/11 18:26:08 betelgeuse Exp $
+
+  11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> -sqlite-3.5.4.ebuild:
+  Remove package.masked ebuild.
 
   11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> -sqlite-3.3.17.ebuild,
   sqlite-3.5.3.ebuild, sqlite-3.5.6.ebuild:
