--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1199 2008/03/11 18:26:22 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1200 2008/03/11 18:34:36 opfer Exp $
+
+  11 Mar 2008; Christian Faulhammer <opfer@gentoo.org> use.local.desc:
+  adding USE=libpaludis for app-portage/gatt-svn
 
   11 Mar 2008; Christian Faulhammer <opfer@gentoo.org> package.mask:
   updated mask for Gatt
