--- a/app-portage/gatt/ChangeLog
+++ b/app-portage/gatt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/gatt-svn
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/gatt/ChangeLog,v 1.1 2008/03/11 18:35:43 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/gatt/ChangeLog,v 1.2 2008/03/11 19:02:22 opfer Exp $
+
+  11 Mar 2008; Christian Faulhammer <opfer@gentoo.org> gatt-0.6.0.ebuild:
+  TODO file is not distributed with the tarball, so don't try to install it
 
 *gatt-9999 (11 Mar 2008)
 *gatt-0.6.0 (11 Mar 2008)
