--- a/dev-ml/ocaml-expat/ChangeLog
+++ b/dev-ml/ocaml-expat/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-ml/ocaml-expat
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/ocaml-expat/ChangeLog,v 1.2 2007/02/07 19:02:15 nattfodd Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/ocaml-expat/ChangeLog,v 1.3 2008/03/11 19:19:58 aballier Exp $
+
+  11 Mar 2008; Alexis Ballier <aballier@gentoo.org>
+  +files/ocaml-expat-0.9.1-test.patch, ocaml-expat-0.9.1.ebuild:
+  Disable broken test that needs a non existant file, add ounit dep for tests,
+  bug #212961, test native code version too, allow to build without ocamlopt,
+  keyword ~amd64
 
   07 Feb 2007; Alexandre Buisse <nattfodd@gentoo.org>
   ocaml-expat-0.9.1.ebuild:
