--- a/app-portage/eix/ChangeLog
+++ b/app-portage/eix/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-portage/eix
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.201 2008/03/05 09:03:19 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.202 2008/03/11 19:24:57 genstef Exp $
+
+*eix-0.12.1 (11 Mar 2008)
+
+  11 Mar 2008; Stefan Schweizer <genstef@gentoo.org> +eix-0.12.1.ebuild:
+  version bump
 
 *eix-0.11.0 (03 Mar 2008)
 
