--- a/sys-kernel/git-sources/ChangeLog
+++ b/sys-kernel/git-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.195 2008/03/11 12:43:16 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.196 2008/03/11 19:32:17 mpagano Exp $
+
+*git-sources-2.6.25_rc5-r2 (11 Mar 2008)
+
+  11 Mar 2008; Mike Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.25_rc5-r2.ebuild:
+  Version bump
 
 *git-sources-2.6.25_rc5-r1 (11 Mar 2008)
 
