--- a/games-sports/xmoto/ChangeLog
+++ b/games-sports/xmoto/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-sports/xmoto
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-sports/xmoto/ChangeLog,v 1.21 2008/02/29 19:39:28 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-sports/xmoto/ChangeLog,v 1.22 2008/03/11 19:32:29 genstef Exp $
+
+*xmoto-0.4.1 (11 Mar 2008)
+
+  11 Mar 2008; Stefan Schweizer <genstef@gentoo.org> +xmoto-0.4.1.ebuild:
+  version bump thanks to Tomáš Chvátal <tomas.chvatal@gmail.com> in bug 208008
 
   29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> xmoto-0.2.0.ebuild:
   Remove icon extension from desktop entry to match Icon Theme Specification.
