--- a/sys-apps/gradm/ChangeLog
+++ b/sys-apps/gradm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/gradm
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gradm/ChangeLog,v 1.90 2007/10/21 00:55:24 phreak Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gradm/ChangeLog,v 1.91 2008/03/11 19:34:42 phreak Exp $
+
+*gradm-2.1.11.200803102037 (11 Mar 2008)
+
+  11 Mar 2008; Christian Heim <phreak@gentoo.org>
+  +gradm-2.1.11.200803102037.ebuild:
+  Version bump, thanks to Gordon Malm on IRC.
 
 *gradm-2.1.11.200708011700 (21 Oct 2007)
 
