--- a/games-sports/stormbaancoureur/ChangeLog
+++ b/games-sports/stormbaancoureur/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-sports/stormbaancoureur
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-sports/stormbaancoureur/ChangeLog,v 1.8 2008/02/10 14:55:05 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-sports/stormbaancoureur/ChangeLog,v 1.9 2008/03/11 19:47:58 mr_bones_ Exp $
+
+*stormbaancoureur-2.1.2 (11 Mar 2008)
+
+  11 Mar 2008; Michael Sterrett <mr_bones_@gentoo.org>
+  -stormbaancoureur-2.1.1.ebuild, +stormbaancoureur-2.1.2.ebuild:
+  version bump
 
 *stormbaancoureur-2.1.1 (10 Feb 2008)
 
