--- a/media-gfx/picasa/ChangeLog
+++ b/media-gfx/picasa/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/picasa
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/picasa/ChangeLog,v 1.10 2007/10/17 00:29:11 wolf31o2 Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/picasa/ChangeLog,v 1.11 2008/03/11 19:52:24 genstef Exp $
+
+*picasa-2.7.3736.11 (11 Mar 2008)
+
+  11 Mar 2008; Stefan Schweizer <genstef@gentoo.org>
+  +picasa-2.7.3736.11.ebuild:
+  version bump thanks to parafin in bug 200568
 
   17 Oct 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   picasa-2.2.2820.5.ebuild:
