--- a/sys-fs/fuse/ChangeLog
+++ b/sys-fs/fuse/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/fuse
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse/ChangeLog,v 1.110 2007/12/18 10:09:00 caster Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse/ChangeLog,v 1.111 2008/03/11 19:54:29 genstef Exp $
+
+  11 Mar 2008; Stefan Schweizer <genstef@gentoo.org> fuse-2.7.2.ebuild:
+  Add default config for Henning Schild <henning@wh9.tu-dresden.de> in bug 201105
 
   18 Dec 2007; Vlastimil Babka <caster@gentoo.org> fuse-2.7.1.ebuild:
   Allow the kernel module in 2.7.1 to be compiled with kernel 2.6.23 because
