--- a/www-client/elinks/ChangeLog
+++ b/www-client/elinks/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/elinks
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/elinks/ChangeLog,v 1.97 2008/03/09 23:52:31 ricmm Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/elinks/ChangeLog,v 1.98 2008/03/11 19:57:00 spock Exp $
+
+*elinks-0.11.4_rc1 (11 Mar 2008)
+
+  11 Mar 2008; Michał Januszewski <spock@gentoo.org>
+  +elinks-0.11.4_rc1.ebuild:
+  Version bump (bug #212619).
 
   09 Mar 2008; <ricmm@gentoo.org> elinks-0.11.2.ebuild,
   elinks-0.11.2-r1.ebuild, elinks-0.11.3.ebuild:
