--- a/x11-themes/mythtv-themes/ChangeLog
+++ b/x11-themes/mythtv-themes/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/mythtv-themes
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/ChangeLog,v 1.48 2008/03/11 15:40:32 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/mythtv-themes/ChangeLog,v 1.49 2008/03/11 19:59:14 cardoe Exp $
+
+*mythtv-themes-0.22_alpha16504 (11 Mar 2008)
+
+  11 Mar 2008; Doug Goldstein <cardoe@gentoo.org>
+  +mythtv-themes-0.22_alpha16504.ebuild:
+  add 0.22 trunk build for testing
 
 *mythtv-themes-0.21_p16505 (11 Mar 2008)
 
