--- a/media-sound/lastfmplayer/ChangeLog
+++ b/media-sound/lastfmplayer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/lastfmplayer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/lastfmplayer/ChangeLog,v 1.27 2008/02/29 20:02:46 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/lastfmplayer/ChangeLog,v 1.28 2008/03/11 20:05:55 genstef Exp $
+
+  11 Mar 2008; Stefan Schweizer <genstef@gentoo.org>
+  lastfmplayer-1.4.2.58240.ebuild:
+  fix deps, bug 206860
 
   29 Feb 2008; Carsten Lohrke <carlo@gentoo.org>
   lastfmplayer-1.4.2.58240.ebuild:
