--- a/gnome-base/eel/ChangeLog
+++ b/gnome-base/eel/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/eel
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/ChangeLog,v 1.192 2007/11/29 05:24:15 jer Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/ChangeLog,v 1.193 2008/03/11 20:12:56 leio Exp $
+
+  11 Mar 2008; Mart Raudsepp <leio@gentoo.org> eel-2.18.0.1.ebuild,
+  -eel-2.18.3.ebuild, eel-2.20.0.ebuild:
+  Be compatible with newer glib and in general more future proof, bug 212801
 
   29 Nov 2007; Jeroen Roovers <jer@gentoo.org> eel-2.20.0.ebuild:
   Stable for HPPA (bug #199740).
