--- a/dev-java/commons-io/ChangeLog
+++ b/dev-java/commons-io/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/commons-io
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-io/ChangeLog,v 1.43 2008/03/11 14:49:12 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-io/ChangeLog,v 1.44 2008/03/11 20:58:12 ken69267 Exp $
+
+  11 Mar 2008; Kenneth Prugh <ken69267@gentoo.org> commons-io-1.4.ebuild:
+  amd64 stable, bug #212639
 
   11 Mar 2008; Brent Baude <ranger@gentoo.org> commons-io-1.4.ebuild:
   stable ppc64, bug 212639
