--- a/net-im/psi/ChangeLog
+++ b/net-im/psi/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/psi
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/psi/ChangeLog,v 1.128 2008/03/01 13:49:31 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/psi/ChangeLog,v 1.129 2008/03/11 21:02:16 genstef Exp $
+
+  11 Mar 2008; Stefan Schweizer <genstef@gentoo.org> psi-0.11.ebuild:
+  hppa, ppc, ppc64 and sparc dropped because they dont have the dependency
+  qca2 keyworded, thanks Mr_Bones_
 
   01 Mar 2008; <welp@gentoo.org> psi-0.11.ebuild:
   Restrict tests
