--- a/gnome-base/libbonobo/ChangeLog
+++ b/gnome-base/libbonobo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/libbonobo
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonobo/ChangeLog,v 1.148 2008/02/04 04:37:31 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonobo/ChangeLog,v 1.149 2008/03/11 21:11:27 leio Exp $
+
+  11 Mar 2008; Mart Raudsepp <leio@gentoo.org> libbonobo-2.18.0.ebuild,
+  libbonobo-2.20.3.ebuild, libbonobo-2.20.4.ebuild:
+  Be compatible with newer glib and in general more future proof, bug 212246
 
   04 Feb 2008; Jeroen Roovers <jer@gentoo.org> libbonobo-2.20.3.ebuild:
   Stable for HPPA (bug #208366).
