--- a/sys-apps/kexec-tools/ChangeLog
+++ b/sys-apps/kexec-tools/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/kexec-tools
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/kexec-tools/ChangeLog,v 1.17 2008/01/21 08:51:09 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/kexec-tools/ChangeLog,v 1.18 2008/03/11 21:29:02 genstef Exp $
+
+  11 Mar 2008; Stefan Schweizer <genstef@gentoo.org>
+  +files/kexec-tools-1.101-respect-LDFLAGS.patch,
+  kexec-tools-1.101-r4.ebuild:
+  respect ldflags, thanks to Arfrever Frehtes Taifersar Arahesis
+  <Arfrever.FTA@GMail.Com> in bug 181463
 
   21 Jan 2008; Stefan Schweizer <genstef@gentoo.org> files/kexec.init:
   set KPARAM correctly thanks to Friedrich Oslage <bluebird@porno-bullen.de>
