--- a/dev-java/bcprov/ChangeLog
+++ b/dev-java/bcprov/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/bcprov
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/bcprov/ChangeLog,v 1.30 2008/02/15 18:30:21 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/bcprov/ChangeLog,v 1.31 2008/03/11 21:34:35 betelgeuse Exp $
+
+  11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> -bcprov-1.36-r1.ebuild,
+  -bcprov-1.37.ebuild:
+  Delete old versions.
 
   15 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org> bcprov-1.38.ebuild:
   amd64 stable, bug #207590.
