--- a/dev-java/nekohtml/ChangeLog
+++ b/dev-java/nekohtml/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/nekohtml
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/nekohtml/ChangeLog,v 1.6 2008/03/08 21:49:19 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/nekohtml/ChangeLog,v 1.7 2008/03/11 21:43:13 betelgeuse Exp $
+
+  11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org>
+  -nekohtml-0.9.5-r1.ebuild:
+  Delete old version.
 
   08 Mar 2008; Markus Meier <maekke@gentoo.org> nekohtml-1.9.6.ebuild:
   x86 stable, bug #212641
