--- a/sys-kernel/gentoo-sources/ChangeLog
+++ b/sys-kernel/gentoo-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1015 2012/10/02 21:31:10 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1016 2012/10/02 22:48:41 mpagano Exp $
+
+*gentoo-sources-3.6.0 (02 Oct 2012)
+
+  02 Oct 2012; Michael Pagano <mpagano@gentoo.org>
+  +gentoo-sources-3.6.0.ebuild:
+  Linux 3.6.0. kcopy patch. fbcondecor patchset
 
   02 Oct 2012; Markus Meier <maekke@gentoo.org> gentoo-sources-3.4.9.ebuild:
   arm stable, bug #432426
