--- a/app-text/xapian-omega/ChangeLog
+++ b/app-text/xapian-omega/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-text/xapian-omega
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xapian-omega/ChangeLog,v 1.17 2012/09/19 09:42:33 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xapian-omega/ChangeLog,v 1.18 2012/10/02 22:48:51 blueness Exp $
+
+  02 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  -xapian-omega-1.2.10.ebuild, -xapian-omega-1.2.8.ebuild,
+  -xapian-omega-1.2.9.ebuild:
+  Remove older versions
 
   19 Sep 2012; Johannes Huber <johu@gentoo.org> xapian-omega-1.2.12.ebuild:
   Stable for x86, wrt bug #434564
@@ -75,4 +80,3 @@
   24 Dec 2011; Anthony G. Basile <blueness@gentoo.org>
   +xapian-omega-1.2.8.ebuild, +metadata.xml:
   Initial commit, bug #255157
-
