--- a/net-analyzer/wireshark/ChangeLog
+++ b/net-analyzer/wireshark/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.401 2012/09/29 15:40:11 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.402 2012/10/02 23:45:42 jer Exp $
+
+*wireshark-1.8.3 (02 Oct 2012)
+*wireshark-1.6.11 (02 Oct 2012)
+
+  02 Oct 2012; Jeroen Roovers <jer@gentoo.org> +wireshark-1.6.11.ebuild,
+  +wireshark-1.8.3.ebuild:
+  Version bump (bug #437026).
 
   29 Sep 2012; Jeroen Roovers <jer@gentoo.org> -wireshark-1.6.8.ebuild,
   -wireshark-1.6.10.ebuild:
