--- a/sys-kernel/spl/ChangeLog
+++ b/sys-kernel/spl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/spl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/spl/ChangeLog,v 1.29 2012/09/18 22:33:44 ryao Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/spl/ChangeLog,v 1.30 2012/10/03 00:06:36 ryao Exp $
+
+  03 Oct 2012; Richard Yao <ryao@gentoo.org> spl-9999.ebuild:
+  Sync spl-9999.ebuild with spl-0.6.0_rc11.ebuild - thanks prometheanfire
 
 *spl-0.6.0_rc11 (18 Sep 2012)
 
