--- a/sys-libs/freeipmi/ChangeLog
+++ b/sys-libs/freeipmi/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/freeipmi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/freeipmi/ChangeLog,v 1.57 2012/08/26 13:36:34 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/freeipmi/ChangeLog,v 1.58 2012/10/03 01:09:30 flameeyes Exp $
+
+*freeipmi-1.2.2 (03 Oct 2012)
+
+  03 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> +freeipmi-1.2.2.ebuild,
+  -freeipmi-1.1.5.ebuild:
+  Version bump.
 
   26 Aug 2012; Christian Ruppert <idl0r@gentoo.org> freeipmi-1.1.7.ebuild:
   x86 stable wrt bug 432312.
