--- a/net-analyzer/munin/ChangeLog
+++ b/net-analyzer/munin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/munin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.104 2012/10/02 21:04:14 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.105 2012/10/03 01:30:31 flameeyes Exp $
+
+*munin-2.0.7 (03 Oct 2012)
+
+  03 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> +munin-2.0.7.ebuild:
+  Version bump. We're left with only one patch (the new IPMI plugin), everything
+  else is merged upstream.
 
   02 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> munin-2.0.5-r1.ebuild,
   munin-2.0.6.ebuild:
