--- a/www-client/google-chrome/ChangeLog
+++ b/www-client/google-chrome/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for www-client/google-chrome
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.198 2012/10/02 17:50:43 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.199 2012/10/03 03:37:40 floppym Exp $
+
+*google-chrome-24.0.1284.2_alpha159713 (03 Oct 2012)
+
+  03 Oct 2012; Mike Gilbert <floppym@gentoo.org>
+  +google-chrome-24.0.1284.2_alpha159713.ebuild,
+  -google-chrome-23.0.1271.10_alpha158896.ebuild:
+  Dev channel bump.
 
 *google-chrome-23.0.1271.10_beta158896 (02 Oct 2012)
 
