--- a/net-wireless/wifi-radar/ChangeLog
+++ b/net-wireless/wifi-radar/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-wireless/wifi-radar
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/wifi-radar/ChangeLog,v 1.25 2011/12/04 14:38:05 hwoarang Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/wifi-radar/ChangeLog,v 1.26 2012/10/03 04:08:10 zerochaos Exp $
+
+*wifi-radar-2.0.8-r1 (03 Oct 2012)
+
+  03 Oct 2012; Rick Farina <zerochaos@gentoo.org> +wifi-radar-2.0.8-r1.ebuild:
+  force python2, drop pointless use flag, create /etc/wifi-radar, makes me happy
 
   04 Dec 2011; Markos Chandras <hwoarang@gentoo.org> wifi-radar-2.0.8.ebuild:
   Stable on amd64 wrt bug #391487
@@ -109,4 +114,3 @@
 
   04 Nov 2005; Michele Noberasco <s4t4n@gentoo.org> wifi-radar-1.9.4.ebuild:
   Initial import. Closes bug #70591.
-
