--- a/media-video/gtk-recordmydesktop/ChangeLog
+++ b/media-video/gtk-recordmydesktop/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-video/gtk-recordmydesktop
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/gtk-recordmydesktop/ChangeLog,v 1.25 2011/03/12 21:23:10 radhermit Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/gtk-recordmydesktop/ChangeLog,v 1.26 2012/10/03 04:56:03 yngwin Exp $
+
+*gtk-recordmydesktop-0.3.8-r2 (03 Oct 2012)
+
+  03 Oct 2012; Ben de Groot <yngwin@gentoo.org>
+  +gtk-recordmydesktop-0.3.8-r2.ebuild:
+  Add sed to fix bug #415225 and migrate to EAPI=4
 
   12 Mar 2011; Tim Harder <radhermit@gentoo.org>
   -gtk-recordmydesktop-0.3.8.ebuild:
@@ -123,4 +129,3 @@
   25 Mar 2007; Alexis Ballier <aballier@gentoo.org> +metadata.xml,
   +gtk-recordmydesktop-0.3.3.1.ebuild:
   Initial import, thanks to  Rafal Boniecki, bug #164398
-
