--- a/net-p2p/transmission-remote-gtk/ChangeLog
+++ b/net-p2p/transmission-remote-gtk/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/transmission-remote-gtk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission-remote-gtk/ChangeLog,v 1.15 2012/09/24 12:07:23 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission-remote-gtk/ChangeLog,v 1.16 2012/10/03 05:19:13 ssuominen Exp $
+
+  03 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  transmission-remote-gtk-1.1.ebuild:
+  Raise GLib and GTK+ dependencies wrt #436340 by "cyberbat"
 
   24 Sep 2012; Samuli Suominen <ssuominen@gentoo.org>
   -transmission-remote-gtk-1.0.1.ebuild, -transmission-remote-gtk-1.0.2.ebuild:
