--- a/media-sound/redoflacs/ChangeLog
+++ b/media-sound/redoflacs/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/redoflacs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/redoflacs/ChangeLog,v 1.1 2012/09/23 04:06:03 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/redoflacs/ChangeLog,v 1.2 2012/10/03 05:25:40 yngwin Exp $
+
+*redoflacs-0.14.1.1 (03 Oct 2012)
+
+  03 Oct 2012; Ben de Groot <yngwin@gentoo.org> +redoflacs-0.14.1.1.ebuild:
+  Version bump
 
 *redoflacs-0.14.1 (23 Sep 2012)
 
