--- a/media-libs/tiff/ChangeLog
+++ b/media-libs/tiff/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/tiff
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/tiff/ChangeLog,v 1.215 2012/09/24 06:42:41 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/tiff/ChangeLog,v 1.216 2012/10/03 05:28:58 ssuominen Exp $
+
+*tiff-4.0.3 (03 Oct 2012)
+
+  03 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> +tiff-4.0.3.ebuild:
+  Version bump.
 
   24 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> -tiff-4.0.2.ebuild:
   old
