--- a/sys-fs/udisks/ChangeLog
+++ b/sys-fs/udisks/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/udisks
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udisks/ChangeLog,v 1.103 2012/08/06 11:46:40 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udisks/ChangeLog,v 1.104 2012/10/03 06:42:55 ssuominen Exp $
+
+*udisks-2.0.0 (03 Oct 2012)
+
+  03 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> +udisks-2.0.0.ebuild:
+  Version bump.
 
 *udisks-1.99.0-r1 (06 Aug 2012)
 *udisks-1.0.4-r3 (06 Aug 2012)
