--- a/sys-fs/udisks/ChangeLog
+++ b/sys-fs/udisks/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/udisks
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udisks/ChangeLog,v 1.104 2012/10/03 06:42:55 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udisks/ChangeLog,v 1.105 2012/10/03 06:44:19 ssuominen Exp $
+
+  03 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> -udisks-1.99.0.ebuild,
+  -udisks-1.99.0-r1.ebuild:
+  old
 
 *udisks-2.0.0 (03 Oct 2012)
 
