--- a/app-text/qpdfview/ChangeLog
+++ b/app-text/qpdfview/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-text/qpdfview
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/qpdfview/ChangeLog,v 1.21 2012/10/03 06:35:04 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/qpdfview/ChangeLog,v 1.22 2012/10/03 06:50:35 yngwin Exp $
+
+*qpdfview-0.3.5_beta1 (03 Oct 2012)
+
+  03 Oct 2012; Ben de Groot <yngwin@gentoo.org> +qpdfview-0.3.5_beta1.ebuild,
+  metadata.xml:
+  Add beta version with new SyncTeX feature
 
 *qpdfview-0.3.4 (03 Oct 2012)
 
