--- a/www-client/qupzilla/ChangeLog
+++ b/www-client/qupzilla/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-client/qupzilla
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/qupzilla/ChangeLog,v 1.15 2012/09/19 08:11:14 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/qupzilla/ChangeLog,v 1.16 2012/10/03 07:21:20 yngwin Exp $
+
+  03 Oct 2012; Ben de Groot <yngwin@gentoo.org>
+  +files/qupzilla-1.3.5-libX11-underlinking.patch, qupzilla-1.3.5.ebuild:
+  Add libX11-underlinking.patch (applied in git upstream) from Alec Moskvin in
+  bug #436232. Add epatch_user.
 
   19 Sep 2012; Ben de Groot <yngwin@gentoo.org> qupzilla-1.3.5.ebuild:
   Use mirror; clean-up
