--- a/www-apps/trac/ChangeLog
+++ b/www-apps/trac/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/trac
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/trac/ChangeLog,v 1.129 2012/09/30 11:45:03 djc Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/trac/ChangeLog,v 1.130 2012/10/03 08:06:59 djc Exp $
+
+  03 Oct 2012; Dirkjan Ochtman <djc@gentoo.org> trac-1.0.ebuild:
+  Cope with moved cgi scripts (bug 436748).
 
   30 Sep 2012; Dirkjan Ochtman <djc@gentoo.org> -trac-0.12.2-r1.ebuild:
   Remove old version.
