--- a/app-cdr/k3b/ChangeLog
+++ b/app-cdr/k3b/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-cdr/k3b
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.275 2012/09/11 13:43:33 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.276 2012/10/03 08:59:06 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> k3b-2.0.2-r4.ebuild:
+  Stable for X86, wrt bug #436326
 
   11 Sep 2012; Michael Palimaka <kensington@gentoo.org> k3b-2.0.2-r4.ebuild:
   Only depend on transcode with encode USE flag, by Guillaume Castagnino
