--- a/kde-base/kdeartwork-kscreensaver/ChangeLog
+++ b/kde-base/kdeartwork-kscreensaver/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeartwork-kscreensaver
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-kscreensaver/ChangeLog,v 1.235 2012/10/02 18:11:54 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-kscreensaver/ChangeLog,v 1.236 2012/10/03 09:07:57 kensington Exp $
+
+  03 Oct 2012; Michael Palimaka <kensington@gentoo.org>
+  kdeartwork-kscreensaver-4.9.2.ebuild:
+  Add missing deps.
 
 *kdeartwork-kscreensaver-4.9.2 (02 Oct 2012)
 
@@ -1111,4 +1115,3 @@
   +kdeartwork-kscreensaver-3.4.0_beta1.ebuild:
   Adding the split ebuilds to portage. For KDE 3.4, we've created separate
   ebuilds for all the KDE apps.
-
